--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="./vendor/owl/css/owl.css">
     <link rel="stylesheet" href="./vendor/fontawesome/fontawesome.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>jQuery</title>
+    <title>Adidas Skateboarding</title>
 </head>
 <body>
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="assets/images/header-logo.png" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="assets/images/header-logo.svg" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -22,7 +22,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">Home
-                            <span class="sr-only">(current)</span>
+                            <span class="sr-only"></span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="about.html">Sobre nós</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contato</a>
+                        <a class="nav-link" href="contato.html">Contato</a>
                     </li>
                 </ul>
             </div>
@@ -44,9 +44,9 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="caption">
-                        <h2>Ecommerce HTML Template</h2>
+                        <h1>Adidas Skateboarding</h1>
                         <div class="line-dec"></div>
-                        <p>HTML Template can be converted into your desired CMS theme. </p>
+                        <p>Sua Loja de Skate para todos os momentos</p>
                     </div>
                 </div>
             </div>
@@ -66,72 +66,72 @@
                     <div class="owl-carousel owl-theme">
                         <div class="featured-item">
                             <img src="assets/images/item-01.jpg" alt="Item 1">
-                            <h4>Produto 1</h4>
-                            <h6>R$ 20,00</h6>
+                            <h3>Moletom - Henry Jones</h3>
+                            <h4>R$ 200,00</h4>
                             <a href="single-product.html">
                                 Comprar
                             </a>
                         </div>
                         <div class="featured-item">
                             <img src="assets/images/item-02.jpg" alt="Item 2">
-                            <h4>Produto 2</h4>
-                            <h6>R$ 20,00</h6>
+                            <h3>Tênis Gazelle 2</h3>
+                            <h4>R$ 600,00</h4>
                             <a href="single-product.html">
                                 Comprar
                             </a>
                         </div>
                         <div class="featured-item">
                             <img src="assets/images/item-03.jpg" alt="Item 3">
-                            <h4>Produto 3</h4>
-                            <h6>R$ 20,00</h6>
+                            <h3>Tênis Busenitz Vulc 2.0</h3>
+                            <h4>R$ 600,00</h4>
                             <a href="single-product.html">
                                 Comprar
                             </a>
                         </div>
                         <div class="featured-item">
                             <img src="assets/images/item-04.jpg" alt="Item 4">
-                            <h4>Produto 4</h4>
-                            <h6>R$ 20,00</h6>
+                            <h3>Camiseta Skate Feminina</h3>
+                            <h4>R$ 229,00</h4>
                             <a href="single-product.html">
                                 Comprar
                             </a>
                         </div>
                         <div class="featured-item">
                             <img src="assets/images/item-05.jpg" alt="Item 5">
-                            <h4>Produto 5</h4>
-                            <h6>R$ 20,00</h6>
+                            <h3>Tênis Superstar</h3>
+                            <h4>R$ 499,00</h4>
                             <a href="single-product.html">
                                 Comprar
                             </a>
                         </div>
                         <div class="featured-item">
                             <img src="assets/images/item-06.jpg" alt="Item 6">
-                            <h4>Produto 6</h4>
-                            <h6>R$ 20,00</h6>
+                            <h3>Moletom Fleece</h3>
+                            <h4>R$ 449,00</h4>
                             <a href="single-product.html">
                                 Comprar
                             </a>
                         </div>
                         <div class="featured-item">
-                            <img src="assets/images/item-04.jpg" alt="Item 7">
-                            <h4>Produto 7</h4>
-                            <h6>R$ 20,00</h6>
+                            <img src="assets/images/item-07.jpg" alt="Item 7">
+                            <h3>Camiseta Shmoofoil</h3>
+                            <h4>R$ 199,00</h4>
                             <a href="single-product.html">
                                 Comprar
                             </a>
                         </div>
                         <div class="featured-item">
-                            <img src="assets/images/item-05.jpg" alt="Item 8">
-                            <h4>Produto 8</h4>
-                            <h6>R$ 20,00</h6>
+                            <img src="assets/images/item-08.jpg" alt="Item 8">
+                            <h3>Camiseta Mettz World</h3>
+                            <h4>R$ 179,00</h4>
                             <a href="single-product.html">
                                 Comprar
                             </a>
                         </div>
                         <div class="featured-item">
-                            <img src="assets/images/item-06.jpg" alt="Item 9">
-                            <h4>Produto 9</h4>
-                            <h6>R$ 20,00</h6>
+                            <img src="assets/images/item-09.jpg" alt="Item 9">
+                            <h3>Camiseta Originals</h3>
+                            <h4>R$ 20,00</h4>
                             <a href="single-product.html">
                                 Comprar
                             </a>
@@ -147,17 +147,17 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="logo">
-                        <img src="assets/images/header-logo.png" alt="">
+                        <img src="assets/images/header-logo." alt="">
                     </div>
                 </div>
                 <div class="col-md-12">
                     <div class="footer-menu">
                         <ul>
                             <li><a href="#">Home</a></li>
-                            <li><a href="#">Help</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">How It Works ?</a></li>
-                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Produtos</a></li>
+                            <li><a href="#">Sobre</a></li>
+                            <li><a href="#">Entrega e Frete </a></li>
+                            <li><a href="#">Contato</a></li>
                         </ul>
                     </div>
                 </div>
@@ -180,7 +180,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="copyright-text">
-                        <p>WebStore &copy; Todos os direitos reservados
+                        <p>Adidas Skateboarding &copy; Todos os direitos reservados
                         </div>
                     </div>
                 </div>
